<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Fitness App</string>
    <string name="exercises_title">Exercises</string>
    <string name="add_exercise">Add exercise</string>
    <string name="delete_exercise">Delete exercise</string>
    <string name="exercise_added">Exercise added</string>
    <string name="exercise_deleted">Exercise deleted</string>
    <string name="fill_all_fields">Please fill all fields</string>
    <string name="category_strength">Strength</string>
    <string name="category_cardio">Cardio</string>
    <string name="category_flexibility">Flexibility</string>
    <string name="category_balance">Balance</string>
    <string name="category_endurance">Endurance</string>
    <string name="add_new_exercise">Add new exercise</string>
    <string name="exercise_name">Exercise name</string>
    <string name="category">Category</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="workouts">Workouts</string>
    <string name="exercises">Exercises</string>
    <string name="progress">Progress</string>
    <string name="new_workout">New workout</string>
    <string name="workout_name">Workout name</string>
    <string name="select_exercise">Select exercise</string>
    <string name="number_of_sets">Number of sets</string>
    <string name="repetitions_per_set">Repetitions per set</string>
    <string name="weight_kg">Weight (kg)</string>
    <string name="save">Save</string>
    <string name="time_per_set_minutes">Time per set (seconds)</string>
    <string name="exercise">Exercise</string>
    <string name="exercise_type">Exercise type</string>
    <string name="exercise_progress">Exercise progress</string>
    <string name="welcome_to_fitnessapp">Welcome to FitWorld</string>
    <string name="age">Age</string>
    <string name="height_cm">Height (cm)</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="your_progress">Your progress</string>
    <string name="current_weight_with_colon">Current weight: </string>
    <string name="current_height_with_colon">Current height: </string>
    <string name="current_bmi_with_colon">Current BMI: </string>
    <string name="weight">Weight</string>
    <string name="bmi">BMI</string>
    <string name="sets_with_colon">Sets: </string>
    <string name="reps_with_colon">Reps: </string>
    <string name="duration_with_colon">Duration: </string>
    <string name="distance_with_colon">Distance: </string>
    <string name="start_your_journey">Start your journey</string>
    <string name="workout_deleted">Workout deleted</string>
    <string name="add_new_workout">Add new workout</string>
    <string name="workout_added">Workout added</string>
    <string name="distance_km">Distance (km)</string>
    <string name="duration_minutes">Duration (min)</string>
    <string name="select_category_first">Select category first</string>
    <string name="workout_date">Workout date</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="delete_workout">Delete workout</string>
    <string name="choose_workout_date">Choose workout date</string>
    <string name="duration_sec">duration (sec)</string>
    <string name="no_info_about_workload">No info about workload</string>
    <string name="add_conditions_record">Add record</string>
    <string name="record_added">Record added</string>
    <string name="weight_dynamics">Weight dynamics</string>
    <string name="delete_record">Delete record</string>
    <string name="date_with_colon">"Date: "</string>
    <string name="weight_with_colon">"Weight(kg): "</string>
    <string name="height_with_colon">"Height(sm): "</string>
    <string name="choose_gender">Choose gender</string>
    <string name="please_enter_correct_data">Please enter correct data</string>
    <string name="exercise_already_exists">Exercise already exists</string>
    <string name="workout_updated">Workout updated</string>
</resources>